--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+$widthG: 100%;
+$height: 30px;
+$backgrounColorI: #ddd;
+$backgrounColorE:  green;
+$borderColorE:  green;
+$colorE:  green;
+
+.container{
+  width: $widthG;
+}
+.progressBar{
+  counter-reset:step;
+}
+.progressBar li{
+  list-style-type:none;
+  float: left;
+  width: 33.33%;
+  position:relative;
+  text-align: center;
+}
+//estilos del circulo
+.progressBar li:before{
+  content: counter(step);
+  counter-increment: step;
+  width: $height;
+  line-height:$height;
+  border:1px solid $backgrounColorI;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  border-radius: 50%;
+  background-color: white;
+}
+//estilos para la linea 
+.progressBar li:after{
+  content:'';
+  position: absolute;
+  width: $widthG;
+  height: 1px;
+  background-color: $backgrounColorI;
+  top: 15px;
+  left: -50%;
+  z-index: -1;
+}
+.progressBar li:first-child:after{
+  content:none;
+}
+//color del texto dataClient
+.progressBar li.active{
+  color: $colorE;
+}
+// no se vean en verde todos los circulos
+.progressBar li.active:before{
+  border-color:$colorE;
+}
+//union: color del texto + estilos de la linea
+/* .progressBar li.active + li:after{
+  background-color: $backgrounColorE;
+} */
+
+h1 .formulario{
+  display: block;
+  position: relative;
+  text-align: center;
+  margin-top: 20%;
+}
+.formulario{
+  display: block;
+  position: relative;
+  text-align: center;
+  margin-top: 10%;
+}
