--- a/src/index.scss
+++ b/src/index.scss
@@ -13,9 +13,9 @@ code {
 }
 
 
-// .container{
-//   max-width: 1440px;
-// }
+.container{
+  max-width: 1440px;
+}
 
 .btn-navbar{
   /* margin-right:2em; */
@@ -36,8 +36,8 @@ code {
 }
 
 .padded{
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 // #containerRoot .col {
@@ -79,12 +79,12 @@ code {
 .menuModal.modal-content {
 	border-radius: 0;
   border: 0 !important;
-  background-color: #a83a3a;
+  background-color: #C5165B;
 }
 
 .menuModal.modal-header {
 	border-bottom-color: #faf2f2ab;
-	background-color: #a83a3a;
+	background-color: #C5165B;
 }
 
 .menuModal.modal{
@@ -92,14 +92,14 @@ code {
   top: -30px !important;
 }
 .menuModal.modal-body{
-  background-color: #a83a3a;
+  background-color: #C5165B;
 }
 .menuModal.modal-body a{
   color:white;
 }
 .menuModal.modal-header {
   border-bottom-color: #fafafa;
-  background-color:#a83a3a;
+  background-color: #C5165B;
   border-bottom: 0 !important;
   padding: 0.5rem 1rem;
 }
@@ -132,4 +132,59 @@ code {
   .menuModal .modal-backdrop{
     display: none;
   }
+}
+
+.row.listTasasHeader {
+  background-color: #C5165B;
+  color: #ffff;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.row.listTasasEntidad {
+  background-color: #ffffff;
+  padding: 2rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+.btnListTasas  button{
+  margin-left: 1em;
+  margin-right: 1em;
+}
+.col-12.listBank {
+  padding: 1rem 1rem;
+}
+.col-12.listBankHorario {
+  padding: 1rem;
+}
+.btn.btn-xm.btn-prestamo-a {
+  background-color: #ffffff;
+  border-color: #C5165B;
+  color: #0a0a0a;
+  border-radius: 5rem;
+  margin: 0.5rem;
+  font-size: small;
+}
+.btn.btn-xm.btn-prestamo-b {
+  background-color: #C5165B;
+  border-color: #ac0e0ecf;
+  color: #ffffff;
+  border-radius: 5rem;
+  margin: 0.5rem;
+  font-size: small;
+}
+.btn.btn-xm.btn-prestamo-c {
+  font-size: 1rem;
+  font-weight: bolder;
+  background-color: #ffc107;
+  border-color: #ffc107;
+  color: #ffffff;
+  border-radius: 90px 90px;
+}
+#listTasas hr {
+  margin: 0.2rem;
+  padding: 0.5rem;
 }
