--- a/src/index.scss
+++ b/src/index.scss
@@ -152,6 +152,26 @@ p.hola{
   text-align: center;
   font-size: 85%; */
 }
+p.hola2{
+  margin-top: 5%;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: -0.3px;
+  margin-left: 8%;
+  width: 85%;
+  height: 50%;
+  padding-bottom: black;
+  /* border-bottom: black; */
+
+ /*  align-content: center;
+  font-family: Roboto;
+  text-align: center;
+  font-size: 85%; */
+}
 .colorOption{
   border-color: #C5165B;
 }
@@ -187,6 +207,11 @@ p.hola{
   padding: 0rem;
 }
 .img{
+  width: 100px;
+  height: 50px;
+}
+.img2{
+  margin-top: 5%;
   width: 100px;
   height: 50px;
 }
@@ -375,6 +400,13 @@ p.hola{
   color: #ffffff;
   @include bootsPrestamo();
 }
+.btn.btn-xm.btn-prestamo-b12 {
+  width: 50%;
+  background-color:$colorRosa;
+  border-color: #ac0e0ecf;
+  color: #ffffff;
+  @include bootsPrestamo();
+}
 //-------------------------------------------- Fin Botones Home -------------------------------------------- 
 .btn.btn-xm.btn-prestamo-c {
   font-size: 1rem;
@@ -393,8 +425,8 @@ p.hola{
 }
 //-------------------------------------------- Inicio Botones Home -------------------------------------------- 
 .goo{
-  width: 78%;
-  height: 37%;
+  width: 10%;
+  height: 10%;
 }
 .inputInicio{
   margin-top: 11px;
@@ -411,3 +443,22 @@ p.hola{
   margin-bottom: 10px;
 }
 //-------------------------------------------- Fin Botones Home -------------------------------------------- 
+/* .formDos{
+  grid-template-columns: 1fr;
+  text-align: center; */
+ /*  padding-top: 5px;
+  padding-bottom: 8px; */
+
+/* .formDos1{
+  text-align: center;
+} */
+.daniForm{
+  flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.btn-log-out{
+  height: 20%;
+  width: 100%;
+}
