--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -22,19 +23,37 @@ $backgrounColorI: #ddd;
 $backgrounColorE: #4A4ADA;
 $borderColorE: #4A4ADA;
 $colorE: #ddd;
+$borderColorFont: #4A4ADA;
+$primary: $borderColorFont !default;
 
-.containerAll{
-  margin-right: 8%;
-  margin-bottom: 50%;
+
+// .containerAll{
+//   // margin-right: 8%;
+//   // margin-bottom: 50%;
+// }
+#color{
+  border:1px solid #202225;
+}
+#btnColor{
+  background-color:1px solid #C5165B;
+}
+#colorLabel{
+text-align:start;
+font-weight: bold;
+color:#C5165B;
 }
 .container{
   width: 250%;
   margin-right: 7%;
 }
 .progressBar{
+  display: flex;
+  flex-direction: row;
+  padding-left: 0px;
   counter-reset:step;
   font-size: 80%;
   color: white;
+  padding-left:0px;
 }
 .progressBar li{
   font-size: 40%;
@@ -114,6 +133,7 @@ h1 .formulario{
 .referenc{
   align-content: center;
   margin-top: 10%;
+  border-bottom: 1px solid rgba(43, 40, 40, 0.152);
 }
 p{
   font-family: Roboto;
@@ -142,18 +162,19 @@ p.hola{
   font-size: 85%; */
 }
 .referenc2{
+  margin-top:1rem;
   display: block;
   padding-bottom: black;
 } 
 .formDiv{
-  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.2);
-  margin-top: 40%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24), 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.12);
+  /* margin-top: 40%; */
   margin-left: auto;
   margin-right: auto;
-  background: white;
+  background: #fff;
   border-radius: 10px;
   width: 85%;
-  height: 30%;
+  /* height: 30%; */
   padding: 20px;
 }
 // .container{
@@ -182,7 +203,11 @@ p.hola{
 }
 
 .padded{
-  padding-top: 90px;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-content: center;
+  padding-top: 1rem;
   padding-bottom: 90px;
 }
 
