--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+
+
+$theme-colors: (
+  "primary": #C5165B,
+
+);
+// Bootstrap and its default variables
+
+@import "../node_modules/bootstrap/scss/bootstrap";
 //-------------------------------------------- Variables, mixin, include -------------------------------------------- 
 $widthG: 100%;
 $height: 30px;
@@ -74,9 +83,9 @@ color:#C5165B;
   flex-direction: row;
   padding-left: 0px;
   counter-reset:step;
-  font-size: 80%;
   color: white;
   padding-left:0px;
+  width:90%;
 }
 .progressBar li{
   font-size: 40%;
@@ -86,18 +95,18 @@ color:#C5165B;
   padding: 10%;  
   position:relative;
   text-align: center;
-  font-size: 11px;
-  color:$backgrounColorE
+  font-size: 15px;
+  color:$backgrounColorE;
 }
 //estilos del circulo
           .progressBar li:before{
             padding: 8%; 
-            font-size: 140%;
+            font-size: 22px;
             content: counter(step);
             counter-increment: step;
             width: $height;
             line-height:$height;
-            border:1px solid $backgrounColorI;
+            border:2px solid $borderColorE;
             display: block;
             text-align: center;
             margin: 0 auto 5px auto;
@@ -110,8 +119,9 @@ color:#C5165B;
               position: absolute;
               width: $widthG;
               height: 1px;
-              background-color: $backgrounColorI;
-              top: 38px;
+              background-color: $borderColorE;
+              border: 1px solid $borderColorE;
+              top: 50px;
               left: -50%;
               z-index: -1;
               text-align: center;
@@ -147,7 +157,7 @@ h1 .formulario{
 }
 .referenc{
   align-content: center;
-  margin-top: 10%;
+  margin-top: 2rem;
   border-bottom: 1px solid rgba(43, 40, 40, 0.152);
 }
 p{
@@ -157,11 +167,19 @@ p{
   font-size: 140%;
   margin-top: 20%;
 }
-p.hola{
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: normal;
+.text-formPage{
+  font-family: Roboto;
   font-size: 16px;
+  letter-spacing: -0.3px;
+  font-weight: 500;
+  line-height: 19px;
+  text-align: center;
+}
+p.hola{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
   line-height: 22px;
   text-align: center;
   letter-spacing: -0.3px;
@@ -490,4 +508,29 @@ p.hola2{
 .btn-log-out{
   height: 20%;
   width: 100%;
+}
+// @media only screen and (max-width: 600px) {...}
+
+// /* Small devices (portrait tablets and large phones, 600px and up) */
+// @media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .progressBar li:after{
+    top: 80px;
+  }
+}
+
+// /* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .progressBar li:after{
+    top: 100px;
+  }
+}
+
+// /* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .progressBar li:after{
+    top: 130px;
+  }
 }
