--- a/src/index.scss
+++ b/src/index.scss
@@ -66,13 +66,19 @@ $primary: $borderColorFont !default;
 #color{
   border:1px solid #202225;
 }
-#btnColor{
-  background-color:1px solid #C5165B;
+.btnColor{
+  border:1px solid #C5165B;
+  background-color: #C5165B;
 }
-#colorLabel{
+.form-align{
+display: flex;
+justify-content: center;
+}
+.colorLabel{
 text-align:start;
 font-weight: bold;
 color:#C5165B;
+margin: 5px auto;
 }
 .container{
   width: 250%;
@@ -92,7 +98,7 @@ color:#C5165B;
   list-style-type:none;
   float: left;
   width: 25%;
-  padding: 10%;  
+  padding: 6%;  
   position:relative;
   text-align: center;
   font-size: 15px;
@@ -100,7 +106,6 @@ color:#C5165B;
 }
 //estilos del circulo
           .progressBar li:before{
-            padding: 8%; 
             font-size: 22px;
             content: counter(step);
             counter-increment: step;
@@ -121,7 +126,7 @@ color:#C5165B;
               height: 1px;
               background-color: $borderColorE;
               border: 1px solid $borderColorE;
-              top: 50px;
+              top: 40px;
               left: -50%;
               z-index: -1;
               text-align: center;
@@ -156,7 +161,7 @@ h1 .formulario{
   margin-top: 10%;
 }
 .referenc{
-  align-content: center;
+  text-align:center;
   margin-top: 2rem;
   border-bottom: 1px solid rgba(43, 40, 40, 0.152);
 }
@@ -164,17 +169,13 @@ p{
   font-family: Roboto;
   width: 100%;
   text-align: center;
-  font-size: 140%;
-  margin-top: 20%;
-}
-.text-formPage{
-  font-family: Roboto;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: -0.3px;
   font-weight: 500;
   line-height: 19px;
-  text-align: center;
+  padding:10px 25px;
 }
+
 p.hola{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
@@ -221,7 +222,10 @@ p.hola2{
   margin-top:1rem;
   display: block;
   padding-bottom: black;
-} 
+}
+.custom-input{
+  border: 1px solid #0a0a0a;
+}
 .formDiv{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24), 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.12);
   /* margin-top: 40%; */
@@ -517,20 +521,23 @@ p.hola2{
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .progressBar li:after{
-    top: 80px;
+    top: 60px;
   }
 }
 
 // /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .progressBar li:after{
-    top: 100px;
+    top: 80px;
+  };
+  p{
+    font-size: 25px;
   }
 }
 
 // /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .progressBar li:after{
-    top: 130px;
+    top: 90px;
   }
 }
