--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,12 @@
 
 
-$theme-colors: (
-  "primary": #C5165B,
+// $theme-colors: (
+//   "primary": #C5165B,
 
-);
-// Bootstrap and its default variables
+// );
+// // Bootstrap and its default variables
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+// @import "../node_modules/bootstrap/scss/bootstrap";
 //-------------------------------------------- Variables, mixin, include -------------------------------------------- 
 $widthG: 100%;
 $height: 30px;
@@ -180,12 +180,12 @@ p.hola{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 15px;
   line-height: 22px;
   text-align: center;
   letter-spacing: -0.3px;
-  margin-left: 8%;
-  width: 85%;
+  margin: 0px auto;
+  width: 90%;
   height: 50%;
   padding-bottom: black;
   /* border-bottom: black; */
@@ -273,7 +273,6 @@ p.hola2{
   align-items: center;
   justify-content: center;
   padding-top: 1rem;
-  padding-bottom: 90px;
 }
 
 .container .col {
@@ -383,7 +382,7 @@ p.hola2{
 
 .row.listTasasEntidad {
   background-color: #ffffff;
-  padding: 2rem;
+  padding: 0rem 2rem;
   font-weight: 400;
   text-align: center;
 }
@@ -391,9 +390,13 @@ p.hola2{
 .btnListTasas  button{
   margin-left: 1em;
   margin-right: 1em;
+  border: 1px solid $colorRosa;
+  background-color: $colorRosa;
+  color:$colorE
 }
 .col-12.listBank {
   padding: 1rem 1rem;
+  font-weight: bolder;
 }
 .col-12.listBankHorario {
   padding: 1rem;
@@ -471,9 +474,9 @@ p.hola2{
   margin: 0.2rem;
   padding: 0.5rem;
 }
-.containerListBank {
-  padding: 1rem;
-}
+// .containerListBank {
+//   padding: 1rem;
+// }
 //-------------------------------------------- Inicio Botones Home -------------------------------------------- 
 .goo{
   width: 10%;
@@ -538,6 +541,6 @@ p.hola2{
 // /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .progressBar li:after{
-    top: 90px;
+    top: 80px;
   }
 }
